# Advanced-Go-AI-Agent

./: .gitignore  FINDINGS.md  Readme.md  pyproject.toml
Stage 1/: 75.py  my_player3.py  write.py
api/: __init__.py  main.py  schemas.py  store.py
go_arena/: __init__.py  __main__.py
go_arena/agents/: __init__.py  alphabeta_agent.py  base.py  greedy_agent.py  minimax_agent.py  random_agent.py
go_arena/engine/: __init__.py  board.py  render.py  rules.py  types.py
go_arena/tournament/: __init__.py  match.py
scripts/: dev.sh
tests/: test_agents.py  test_engine_capture.py  test_engine_ko.py  test_engine_legality.py  test_engine_render.py  test_engine_scoring.py  test_engine_suicide.py  test_perf_smoke.py  test_regression_alphabeta.py
tests/data/: regression_alphabeta.json
web/: package-lock.json  package.json  tailwind.config.js
web/src/: App.css  App.tsx  index.css  main.tsx
web/src/components/: GameBoard.tsx  Header.tsx
web/src/components/viz/: AlphaBetaViz.tsx  MiniBoardViz.tsx
web/src/lib/: alphabeta.ts  api.ts  types.ts
web/src/pages/: GamePage.tsx  LandingPage.tsx  MethodologyPage.tsx  SetupPage.tsx
